--- a/docs/style.css
+++ b/docs/style.css
@@ -1165,7 +1165,7 @@ textarea:focus {
 }
 
 .myimgbox {
-    background-image: url(https://rawcdn.githack.com/DDJ-Seo/PORTFOLIO/master/docs/resource/my11.png);
+    background-image: url(https://rawcdn.githack.com/DDJ-Seo/new.portfolio/master/docs/resource/my11.png);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -1180,7 +1180,7 @@ textarea:focus {
 
 .img-full1 {
     position: absolute;
-    background-image: url(https://rawcdn.githack.com/DDJ-Seo/PORTFOLIO/master/docs/resource/SMARTfull.png);
+    background-image: url(https://rawcdn.githack.com/DDJ-Seo/new.portfolio/master/docs/resource/SMARTfull.png);
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
@@ -1197,7 +1197,7 @@ textarea:focus {
 
 .img-full2 {
     position:absolute;
-    background-image: url(https://rawcdn.githack.com/DDJ-Seo/PORTFOLIO/master/docs/resource/SUBWAYfull.png);
+    background-image: url(https://rawcdn.githack.com/DDJ-Seo/new.portfolio/master/docs/resource/SUBWAYfull.png);
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
@@ -1214,7 +1214,7 @@ textarea:focus {
 
 .img-full3 {
     position:absolute;
-    background-image: url(https://rawcdn.githack.com/DDJ-Seo/PORTFOLIO/master/docs/resource/MEGABOXfull.png);
+    background-image: url(https://rawcdn.githack.com/DDJ-Seo/new.portfolio/master/docs/resource/MEGABOXfull.png);
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
@@ -1231,7 +1231,7 @@ textarea:focus {
 
 .img-full4 {
     position:absolute;
-    background-image: url(https://rawcdn.githack.com/DDJ-Seo/PORTFOLIO/master/docs/resource/PROJECT.png);
+    background-image: url(https://rawcdn.githack.com/DDJ-Seo/new.portfolio/master/docs/resource/PROJECT.png);
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
